--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -5,7 +5,8 @@
         background-image: linear-gradient(to top, #5f2c82, #49a09d);
     }
     section#login {
-        width: 90vw;
+        width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -26,6 +27,7 @@
     }
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -44,7 +46,8 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 
 }
